page-style.css
/* Services Section Styles  */

.services {
  justify-content: center;
  align-content: center;
}

.services-card {
  background-color: transparent;
  width: 100%;
  max-width: 500px;
  height: 300px;
  perspective: 1000px;
  align-self: center;
  margin-top: 50px;
  border-radius: 5px;
  /* box-shadow: 0 0 8px 5px rgba(0, 0, 0, 0.2); */
}

.services-card-inner {
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
  border-radius: 5px;
}

.services-card:hover .services-card-inner {
  transform: rotateY(180deg);
}

.services-card-front,
.services-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 5px;
  border-radius: 10px;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  border-radius: 5px;
}

.services-card-front {
  background-color: #bbb;
  color: black;
  border-radius: 5px;
}

.services-card-back {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #f36b28;
  color: white;
  transform: rotateY(180deg);
}

.services-card-front h3 {
  font-size: 2em;
  margin: 0;
  position: relative;
  top: -70px;
  color: white;
  text-shadow: 3px 2px 5px rgba(0, 0, 0, 0.5);
}

.services-card-back p,
.services-card-back a {
  font-size: 1.25em;
  margin: 0;
  text-decoration: none;
  color: white;
}

.services-img {
  width: 100%;
  height: 100%;
  border-radius: 5px;
}

/***********************************
***  Testimonial Slider
*************************************/

.shadow-effect {
  background: #fff;
  padding: 20px;
  border-radius: 4px;
  text-align: center;
  border: 1px solid #ECECEC;
  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.10), 0 15px 12px rgba(0, 0, 0, 0.02);
}

#customers-testimonials .shadow-effect p {
  font-family: inherit;
  font-size: 17px;
  line-height: 1.5;
  margin: 0 0 17px 0;
  font-weight: 300;
}

.testimonial-name {
  margin: -17px auto 0;
  display: table;
  width: auto;
  background: #3190E7;
  padding: 9px 35px;
  border-radius: 12px;
  text-align: center;
  color: #fff;
  box-shadow: 0 9px 18px rgba(0, 0, 0, 0.12), 0 5px 7px rgba(0, 0, 0, 0.05);
}

#customers-testimonials .item {
  text-align: center;
  padding: 50px;
  margin-bottom: 80px;
  opacity: .2;
  -webkit-transform: scale3d(0.8, 0.8, 1);
  transform: scale3d(0.8, 0.8, 1);
  -webkit-transition: all 0.3s ease-in-out;
  -moz-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

#customers-testimonials .owl-item.active.center .item {
  opacity: 1;
  -webkit-transform: scale3d(1.0, 1.0, 1);
  transform: scale3d(1.0, 1.0, 1);
}

.owl-carousel .owl-item img {
  transform-style: preserve-3d;
  max-width: 90px;
  margin: 0 auto 17px;
}

#customers-testimonials.owl-carousel .owl-dots .owl-dot.active span,
#customers-testimonials.owl-carousel .owl-dots .owl-dot:hover span {
  background: #3190E7;
  transform: translate3d(0px, -50%, 0px) scale(0.7);
}

#customers-testimonials.owl-carousel .owl-dots {
  display: inline-block;
  width: 100%;
  text-align: center;
}

#customers-testimonials.owl-carousel .owl-dots .owl-dot {
  display: inline-block;
}

#customers-testimonials.owl-carousel .owl-dots .owl-dot span {
  background: #3190E7;
  display: inline-block;
  height: 20px;
  margin: 0 2px 5px;
  transform: translate3d(0px, -50%, 0px) scale(0.3);
  transform-origin: 50% 50% 0;
  transition: all 250ms ease-out 0s;
  width: 20px;
}

